Feature: Add finals leaderboard API
